<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/count_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minus_button"
        android:onClick="countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/countdown"
        app:layout_constraintEnd_toStartOf="@+id/count_settings"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/plus_button"
        android:onClick="countup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/countup"
        app:layout_constraintStart_toEndOf="@+id/count_settings"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/grey_button"
        android:onClick="grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/grey_button"
        app:layout_constraintEnd_toStartOf="@+id/black_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus_button" />

    <Button
        android:id="@+id/black_button"
        android:onClick="black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/black_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/grey_button"
        app:layout_constraintTop_toTopOf="@+id/grey_button" />

    <Button
        android:id="@+id/red_button"
        android:onClick="red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/red_button"
        app:layout_constraintEnd_toStartOf="@+id/blue_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grey_button" />

    <Button
        android:id="@+id/blue_button"
        android:onClick="blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue_button"
        app:layout_constraintEnd_toStartOf="@+id/green_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/red_button"
        app:layout_constraintTop_toTopOf="@+id/red_button" />

    <Button
        android:id="@+id/green_button"
        android:onClick="green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/blue_button"
        app:layout_constraintTop_toTopOf="@+id/blue_button" />

    <Button
        android:id="@+id/save_button"
        android:onClick="save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toStartOf="@+id/reset_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red_button" />

    <Button
        android:id="@+id/reset_button"
        android:onClick="reset2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save_button"
        app:layout_constraintTop_toTopOf="@+id/save_button" />
</android.support.constraint.ConstraintLayout>